popup text overflow fix

--- a/src/popup.css
+++ b/src/popup.css
@@ -32,6 +32,7 @@
 .news-item-data-container {
   padding-left: 5px;
   vertical-align: top;
+  overflow: hidden;
 }
 
 .news-item-title, .news-item-text {
